--- a/features.html
+++ b/features.html
@@ -159,13 +159,13 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-chart-bar"></span>
                                                         </div>
-                                                        <h4><a href="http://php7.commonsupport.com/saasweb/?page_id=13">Marketing
+                                                        <h4><a href="demo.html">Marketing
                                                                 Analytics</a></h4>
                                                         <div class="text">Ipsum dolor sit amet con tetur adipisicing
                                                             elit, sed do eiusm tempor incididunt ut lab oret dolore magn
                                                             aliqua.</div>
                                                         <div class="link-btn"><a
-                                                                href="http://php7.commonsupport.com/saasweb/?page_id=13">Read
+                                                                href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
@@ -174,13 +174,13 @@
                                                     <div class="inner-box">
                                                         <div class="icon-box"><span class="icon icon fa fa-plus-square"></span>
                                                         </div>
-                                                        <h4><a href="http://php7.commonsupport.com/saasweb/?page_id=13">Creative
+                                                        <h4><a href="demo.html">Creative
                                                                 Paths</a></h4>
                                                         <div class="text">Ipsum dolor sit amet con tetur adipisicing
                                                             elit, sed do eiusm tempor incididunt ut lab oret dolore magn
                                                             aliqua.</div>
                                                         <div class="link-btn"><a
-                                                                href="http://php7.commonsupport.com/saasweb/?page_id=13">Read
+                                                                href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
@@ -190,13 +190,13 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-chart-pie"></span>
                                                         </div>
-                                                        <h4><a href="http://php7.commonsupport.com/saasweb/?page_id=13">Data
+                                                        <h4><a href="demo.html">Data
                                                                 Blending</a></h4>
                                                         <div class="text">Ipsum dolor sit amet con tetur adipisicing
                                                             elit, sed do eiusm tempor incididunt ut lab oret dolore magn
                                                             aliqua.</div>
                                                         <div class="link-btn"><a
-                                                                href="http://php7.commonsupport.com/saasweb/?page_id=13">Read
+                                                                href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
@@ -206,13 +206,13 @@
                                                     <div class="inner-box">
                                                         <div class="icon-box"><span class="icon icon fa fa-th-large"></span>
                                                         </div>
-                                                        <h4><a href="http://php7.commonsupport.com/saasweb/?page_id=13">Fresh
+                                                        <h4><a href="demo.html">Fresh
                                                                 Elements</a></h4>
                                                         <div class="text">Ipsum dolor sit amet con tetur adipisicing
                                                             elit, sed do eiusm tempor incididunt ut lab oret dolore magn
                                                             aliqua.</div>
                                                         <div class="link-btn"><a
-                                                                href="http://php7.commonsupport.com/saasweb/?page_id=13">Read
+                                                                href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
@@ -222,13 +222,13 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-beer"></span>
                                                         </div>
-                                                        <h4><a href="http://php7.commonsupport.com/saasweb/?page_id=13">Unique
+                                                        <h4><a href="demo.html">Unique
                                                                 Design</a></h4>
                                                         <div class="text">Ipsum dolor sit amet con tetur adipisicing
                                                             elit, sed do eiusm tempor incididunt ut lab oret dolore magn
                                                             aliqua.</div>
                                                         <div class="link-btn"><a
-                                                                href="http://php7.commonsupport.com/saasweb/?page_id=13">Read
+                                                                href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
@@ -238,13 +238,13 @@
                                                         <div class="icon-box"><span
                                                                 class="icon icon fa fa-phone"></span>
                                                         </div>
-                                                        <h4><a href="http://php7.commonsupport.com/saasweb/?page_id=13">Premium
+                                                        <h4><a href="demo.html">Premium
                                                                 Support</a></h4>
                                                         <div class="text">Ipsum dolor sit amet con tetur adipisicing
                                                             elit, sed do eiusm tempor incididunt ut lab oret dolore magn
                                                             aliqua.</div>
                                                         <div class="link-btn"><a
-                                                                href="http://php7.commonsupport.com/saasweb/?page_id=13">Read
+                                                                href="contact.html">Know
                                                                 More <span class="fa fa-arrow-right"></span></a>
                                                         </div>
                                                     </div>
