--- a/modules.html
+++ b/modules.html
@@ -183,7 +183,7 @@
                                                             reprehenderit in voluptate velit.</p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a
-                                                            href="#" class="theme-btn btn-style-twelve"><span
+                                                            href="contact.html" class="theme-btn btn-style-twelve"><span
                                                                 class="fa fa-arrow-right"></span></a>
                                                     </div>
                                                     <div class="count">
@@ -226,7 +226,7 @@
                                                             reprehenderit in voluptate velit.</p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a
-                                                            href="#" class="theme-btn btn-style-twelve"><span
+                                                            href="contact.html" class="theme-btn btn-style-twelve"><span
                                                                 class="fa fa-arrow-right"></span></a>
                                                     </div>
                                                     <div class="count">
@@ -269,7 +269,7 @@
                                                             reprehenderit in voluptate velit.</p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a
-                                                            href="#" class="theme-btn btn-style-twelve"><span
+                                                            href="contact.html" class="theme-btn btn-style-twelve"><span
                                                                 class="fa fa-arrow-right"></span></a>
                                                     </div>
                                                     <div class="count">
