--- a/index.html
+++ b/index.html
@@ -652,10 +652,7 @@
                                                    <img src="images/testimonial-1.png" alt="" />
                                                 </picture>
                                              </figure>
-                                             <div class="text">Lorem ipsum dolor sit amet consectetur adipicing elit sed do usmod
-                                                tempor incididunt.enim ad minim veniam, quis nostrud exer citation ullamco laboris
-                                                nisi ut aliquip commodo perspiciatis unde omnis iste natus error sit voluptatem
-                                                accusantium doloreque laudantum.</div>
+                                             <div class="text">"No matter where you go, CRM is the coolest. Thanks to Agumentik, we've just launched our 5th website and can manage all very easily. You've saved our business! Without CRM, we would have gone bankrupt by now." </div>
                                              <div class="author-info">
                                                 <h4 class="name">Hattie Bradly</h4> <span class="designation">Manager</span>
                                              </div>
@@ -667,10 +664,7 @@
                                                    <img src="images/testimonial-3.png" alt=""/>
                                                 </picture>
                                              </figure>
-                                             <div class="text">Lorem ipsum dolor sit amet consectetur adipicing elit sed do usmod
-                                                tempor incididunt.enim ad minim veniam, quis nostrud exer citation ullamco laboris
-                                                nisi ut aliquip commodo perspiciatis unde omnis iste natus error sit voluptatem
-                                                accusantium doloreque laudantum.</div>
+                                             <div class="text">"Needless to say we are extremely satisfied with the results. I didn't even need training. CRM has got everything I need. I don't always praise, but when I do, it's because of CRM." </div>
                                              <div class="author-info">
                                                 <h4 class="name">Hattie Bradly</h4> <span class="designation">Manager</span>
                                              </div>
@@ -683,10 +677,7 @@
                                                    <img src="images/testimonial-2.png" alt="">
                                                 </picture>
                                              </figure>
-                                             <div class="text">Lorem ipsum dolor sit amet consectetur adipicing elit sed do usmod
-                                                tempor incididunt.enim ad minim veniam, quis nostrud exer citation ullamco laboris
-                                                nisi ut aliquip commodo perspiciatis unde omnis iste natus error sit voluptatem
-                                                accusantium doloreque laudantum.</div>
+                                             <div class="text">"Thank you for making it painless, pleasant and most of all hassle free this is because of your CRM software! If you aren't sure, always go for Agumentik. Thank you so much for your help. This is simply unbelievable.</div>
                                              <div class="author-info">
                                                 <h4 class="name">Hattie Bradly</h4> <span class="designation"></span>
                                              </div>
