--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                         <div class="copyright-text">
                            <p style="color: white;">Copyright © 2019. All Rights Reserved By<a href="https://www.agumentik.com/"> Agumentik </a></p>
                         </div>
-                        <div class="bottom-links ">
+                        <div class="bottom-links lks">
                            <ul class="clearfix btl">
                               <li><a href="#">Terms of Service </a></li>
                               <li><a href="#">Privacy Policy</a></li>
