--- a/modules.html
+++ b/modules.html
@@ -348,13 +348,10 @@
                                             </div>
                                             <div class="col-xl-7">
                                                 <div class="feature-block-three">
-                                                    <h2>Customer Service and Support</h2>
+                                                    <h2>People Management</h2>
                                                     <div class="text wow fadeInUp" data-wow-delay="400ms">
-                                                        <p>This module is designed to manage and document customer information and activities thereby building a
-                                                            long-lasting and
-                                                            strong relationship with new, unmet, existing, and valuable customers. Agumentik has been one such
-                                                            best IT company,
-                                                            which provides exceptional customer service and support using a CRM system.</p>
+                                                        <p>This module assigns the right people at the right place and at the right time for a particular task. The assignment of
+                                                        the tasks is done based on the skills and capabilities of the employees.</p>
                                                     </div>
                                                     <div class="link-btn wow fadeInUp" data-wow-delay="800ms"><a href="contact.html"
                                                             class="theme-btn btn-style-twelve"><span class="fa fa-arrow-right"></span></a>
