--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,14 @@
                padding-left: 20px !important;
             }
          }
+         @media (max-width: 1024px) {
+			   .lgn{
+               display: inline !important;
+            }
+		  }
+		 .lgn{
+               display: none;
+            }
       </style>
       <style type="text/css" id="kc-css-render"></style>
    </head>
@@ -116,6 +124,10 @@
                                     <li id="menu-item-1699" class="menu-item menu-item-type-post_type menu-item-object-page ">
                                        <a title="Contact" href="contact.html" class="hvr-underline-from-left1" aria-expanded="false"
                                           data-scroll data-options="easing: easeOutQuart">Contact</a>
+                                    </li>
+                                    <li id="menu-item-1699" class="menu-item menu-item-type-post_type menu-item-object-page lgn">
+                                       <a title="Login" href="login.html" class="hvr-underline-from-left1" aria-expanded="false" data-scroll
+                                          data-options="easing: easeOutQuart">Sign In</a>
                                     </li>
                                  </ul>
                               </div>
