--- a/demo.html
+++ b/demo.html
@@ -56,6 +56,14 @@
                padding-top: 0px !important;
             }
          }
+         @media (max-width: 1024px) {
+			   .lgn{
+               display: inline !important;
+            }
+		  }
+		 .lgn{
+               display: none;
+            }
 </style>
 <style type="text/css" id="kc-css-render"></style>
 </head>
@@ -110,6 +118,10 @@
                                             <li id="menu-item-1699" class="menu-item menu-item-type-post_type menu-item-object-page ">
                                                 <a title="Contact" href="contact.html" class="hvr-underline-from-left1" aria-expanded="false"
                                                     data-scroll data-options="easing: easeOutQuart">Contact</a>
+                                            </li>
+                                            <li id="menu-item-1699" class="menu-item menu-item-type-post_type menu-item-object-page lgn">
+                                                <a title="Login" href="login.html" class="hvr-underline-from-left1" aria-expanded="false" data-scroll
+                                                    data-options="easing: easeOutQuart">Sign In</a>
                                             </li>
                                         </ul>
                                     </div>
