--- a/lostpass.html
+++ b/lostpass.html
@@ -55,7 +55,15 @@
             .footer-bottom{
                padding-top: 0px !important;
             }
-         }
+		 }
+		 @media (max-width: 1024px) {
+			   .lgn{
+               display: inline !important;
+            }
+		  }
+		 .lgn{
+               display: none;
+            }
 	</style>
 	<style>
 		p,
@@ -121,6 +129,10 @@
 											<li id="menu-item-1699" class="menu-item menu-item-type-post_type menu-item-object-page ">
 												<a title="Contact" href="contact.html" class="hvr-underline-from-left1" aria-expanded="false"
 													data-scroll data-options="easing: easeOutQuart">Contact</a>
+											</li>
+											<li id="menu-item-1699" class="menu-item menu-item-type-post_type menu-item-object-page lgn">
+												<a title="Login" href="login.html" class="hvr-underline-from-left1" aria-expanded="false" data-scroll
+													data-options="easing: easeOutQuart">Sign In</a>
 											</li>
 										</ul>
 									</div>
